for the love of god just dont read the gitignore i fucked up okay im sorry

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,40 @@ cs/post_call/post_call/obj/Debug/post_call.csprojAssemblyReference.cache
 cs/post_call/post_call/obj/Debug/post_call.exe
 cs/post_call/post_call/obj/Debug/post_call.pdb
 cs/post_call/post_call/obj/Debug/config.json
+cs/post_call/post_call/bin/Debug/Castle.Core.dll
+cs/post_call/post_call/bin/Debug/Castle.Core.xml
+cs/post_call/post_call/bin/Debug/Config.Net.dll
+cs/post_call/post_call/bin/Debug/Microsoft.Bcl.AsyncInterfaces.dll
+cs/post_call/post_call/bin/Debug/Microsoft.Bcl.AsyncInterfaces.xml
+cs/post_call/post_call/bin/Debug/NetBox.dll
+cs/post_call/post_call/bin/Debug/NetBox.xml
+cs/post_call/post_call/bin/Debug/Newtonsoft.Json.dll
+cs/post_call/post_call/bin/Debug/Newtonsoft.Json.xml
+cs/post_call/post_call/bin/Debug/post_call.exe.config
+cs/post_call/post_call/bin/Debug/System.Buffers.dll
+cs/post_call/post_call/bin/Debug/System.Buffers.xml
+cs/post_call/post_call/bin/Debug/System.Memory.dll
+cs/post_call/post_call/bin/Debug/System.Memory.xml
+cs/post_call/post_call/bin/Debug/System.Numerics.Vectors.dll
+cs/post_call/post_call/bin/Debug/System.Numerics.Vectors.xml
+cs/post_call/post_call/bin/Debug/YamlDotNet.xml
+cs/post_call/post_call/bin/Debug/YamlDotNet.dll
+cs/post_call/post_call/bin/Debug/System.ValueTuple.xml
+cs/post_call/post_call/bin/Debug/System.ValueTuple.dll
+cs/post_call/post_call/bin/Debug/System.Threading.Tasks.Extensions.xml
+cs/post_call/post_call/bin/Debug/System.Threading.Tasks.Extensions.dll
+cs/post_call/post_call/bin/Debug/System.Text.Json.xml
+cs/post_call/post_call/bin/Debug/System.Text.Json.dll
+cs/post_call/post_call/bin/Debug/System.Text.Encodings.Web.xml
+cs/post_call/post_call/bin/Debug/System.Text.Encodings.Web.dll
+cs/post_call/post_call/bin/Debug/System.Security.Principal.Windows.xml
+cs/post_call/post_call/bin/Debug/System.Security.Principal.Windows.dll
+cs/post_call/post_call/bin/Debug/System.Security.Permissions.xml
+cs/post_call/post_call/bin/Debug/System.Security.Permissions.dll
+cs/post_call/post_call/bin/Debug/System.Security.AccessControl.xml
+cs/post_call/post_call/bin/Debug/System.Security.AccessControl.dll
+cs/post_call/post_call/bin/Debug/System.Runtime.CompilerServices.Unsafe.xml
+cs/post_call/post_call/bin/Debug/System.Runtime.CompilerServices.Unsafe.dll
+cs/post_call/post_call/bin/Debug/System.Configuration.ConfigurationManager.xml
+cs/post_call/post_call/bin/Debug/System.Configuration.ConfigurationManager.dll
+cs/post_call/post_call/obj/Debug/post_call.csproj.CopyComplete
