--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ cs/post_call/post_call/bin/Debug/Imgur.API.xml
 cs/post_call/post_call/bin/Debug/Imgur.API.dll
 cs/post_call/post_call/obj/Debug/post_call.exe.config
 cs/post_call/post_call/obj/Debug/post_call.exe.config
+cs/post_call/.vs/post_call/v16/.suo
+cs/post_call/.vs/post_call/v16/Server/sqlite3/db.lock
+cs/post_call/.vs/post_call/v16/Server/sqlite3/storage.ide
+cs/tray/.vs/tray/v16/.suo
