--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,21 @@ cs/post_call/.vs/post_call/v16/.suo
 cs/post_call/.vs/post_call/v16/Server/sqlite3/db.lock
 cs/post_call/.vs/post_call/v16/Server/sqlite3/storage.ide
 cs/tray/.vs/tray/v16/.suo
+cs/tray/tray/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+cs/tray/tray/obj/Debug/ScreenGrabber.exe
+cs/tray/tray/obj/Debug/ScreenGrabber.pdb
+cs/tray/tray/bin/sweemey i love you.7z
+cs/tray/tray/bin/Debug/ScreenGrabber.pdb
+cs/tray/tray/bin/Debug/ScreenGrabber.exe.config
+cs/tray/tray/bin/Debug/ScreenGrabber.exe
+cs/tray/tray/bin/Debug/data/post_call.exe
+cs/tray/tray/bin/Debug/data/options.ini
+cs/tray/tray/bin/Debug/data/grab_client.exe
+cs/tray/tray/bin/Debug/data/ExecuteShell.dll
+cs/tray/tray/bin/Debug/data/display_screenshot.dll
+cs/tray/tray/bin/Debug/data/display_measure.dll
+cs/tray/tray/bin/Debug/data/data.win
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
