updated tray to support new grab client binary and AAAAAAAAAAAAAAAAAA

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,12 @@ cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
 cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
 cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
 cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide-shm
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide-wal
+cs/tray/tray/data/data.win
+cs/tray/tray/data/display_measure.dll
+cs/tray/tray/data/display_screenshot.dll
+cs/tray/tray/data/ExecuteShell.dll
+cs/tray/tray/data/grab_client.exe
+cs/tray/tray/data/options.ini
+cs/tray/tray/data/post_call.exe
