--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,49 @@ cs/tray/tray/data/ExecuteShell.dll
 cs/tray/tray/data/grab_client.exe
 cs/tray/tray/data/options.ini
 cs/tray/tray/data/post_call.exe
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
+cs/tray/.vs/tray/v16/Server/sqlite3/storage.ide
+cs/post_call/post_call/bin/Release/System.ValueTuple.xml
+cs/post_call/post_call/bin/Release/System.ValueTuple.dll
+cs/post_call/post_call/bin/Release/System.Threading.Tasks.Extensions.xml
+cs/post_call/post_call/bin/Release/System.Threading.Tasks.Extensions.dll
+cs/post_call/post_call/bin/Release/System.Text.Json.xml
+cs/post_call/post_call/bin/Release/System.Text.Json.dll
+cs/post_call/post_call/bin/Release/System.Text.Encodings.Web.xml
+cs/post_call/post_call/bin/Release/System.Text.Encodings.Web.dll
+cs/post_call/post_call/bin/Release/System.Security.Principal.Windows.xml
+cs/post_call/post_call/bin/Release/System.Security.Principal.Windows.dll
+cs/post_call/post_call/bin/Release/System.Security.Permissions.xml
+cs/post_call/post_call/bin/Release/System.Security.Permissions.dll
+cs/post_call/post_call/bin/Release/System.Security.AccessControl.xml
+cs/post_call/post_call/bin/Release/System.Security.AccessControl.dll
+cs/post_call/post_call/bin/Release/System.Runtime.CompilerServices.Unsafe.xml
+cs/post_call/post_call/bin/Release/System.Runtime.CompilerServices.Unsafe.dll
+cs/post_call/post_call/bin/Release/System.Numerics.Vectors.xml
+cs/post_call/post_call/bin/Release/System.Numerics.Vectors.dll
+cs/post_call/post_call/bin/Release/System.Memory.xml
+cs/post_call/post_call/bin/Release/System.Memory.dll
+cs/post_call/post_call/bin/Release/System.Configuration.ConfigurationManager.xml
+cs/post_call/post_call/bin/Release/System.Configuration.ConfigurationManager.dll
+cs/post_call/post_call/bin/Release/System.Buffers.xml
+cs/post_call/post_call/bin/Release/System.Buffers.dll
+cs/post_call/post_call/bin/Release/post_call.pdb
+cs/post_call/post_call/bin/Release/post_call.exe.config
+cs/post_call/post_call/bin/Release/post_call.exe
+cs/post_call/post_call/bin/Release/Newtonsoft.Json.xml
+cs/post_call/post_call/bin/Release/Newtonsoft.Json.dll
+cs/post_call/post_call/bin/Release/Microsoft.Bcl.AsyncInterfaces.xml
+cs/post_call/post_call/bin/Release/Microsoft.Bcl.AsyncInterfaces.dll
+cs/post_call/post_call/bin/Release/Config.Net.dll
+cs/post_call/post_call/bin/Release/Castle.Core.xml
+cs/post_call/post_call/bin/Release/Castle.Core.dll
+cs/post_call/post_call/bin/Debug/post_call_config.ini
+cs/post_call/post_call/obj/Release/post_call.csprojAssemblyReference.cache
+cs/post_call/post_call/obj/Release/post_call.csproj.FileListAbsolute.txt
+cs/post_call/post_call/obj/Release/post_call.csproj.CopyComplete
+cs/post_call/post_call/obj/Debug/post_call.exe.config
+cs/post_call/post_call/Classes/ScreenGrabber - 10-11-2020-12-10-AM.png
+cs/post_call/post_call/obj/Release/post_call.exe
+cs/post_call/post_call/obj/Release/post_call.exe.config
+cs/post_call/post_call/obj/Release/post_call.pdb
