--- a/cs/tray/tray/tray.csproj
+++ b/cs/tray/tray/tray.csproj
@@ -76,12 +76,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="data\data.win">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="data\post_call_config.ini">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -99,21 +93,10 @@
   <ItemGroup>
     <None Include="Resources\icon.png" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="data\display_measure.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="data\display_screenshot.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="data\ExecuteShell.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="data\grab_client.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="data\post_call.exe" />
+    <Folder Include="data\" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="icon_main.ico" />
     <None Include="Resources\icon_main.ico" />
     <None Include="Resources\icon_settings.png" />
